차트 2, 3 색상 수정

--- a/index.html
+++ b/index.html
@@ -672,11 +672,11 @@ Constraints: Single HTML file, no external JS/CSS (except CDNs), no SVG/Mermaid.
                 
                 // Use a different, softer gradient scale, and apply it in the correct order for bottom-darker
                 const q2Colors = [
-                    '#A7C1A8', // Darkest (for "매우 그렇다")
-                    '#D1D8BE', 
-                    '#E5F9E0',
-                    '#F8F4E3', 
-                    '#F2FBE0' // Lightest (for "전혀 그렇지 않다")
+                    '#EEEFE0', // Darkest (for "전혀 그렇지 않다")
+                    '#D1D8BE',
+                    '#A7C1A8',
+                    '#819A91', 
+                    '#7A8E6F' // Lightest(for "매우 그렇다")
                 ];
 
                 const q2Data = {
@@ -752,11 +752,11 @@ Constraints: Single HTML file, no external JS/CSS (except CDNs), no SVG/Mermaid.
 
                 // For Q3, also reverse the gradient for bottom-darker, top-lighter effect
                 const q3Colors = [
-                    '#A7C1A8', // Darkest
+                    '#7A8E6F', // Darkest (for "매우 그렇다")
+                    '#819A91', 
+                    '#A7C1A8',
                     '#D1D8BE', 
-                    '#E5F9E0',
-                    '#F8F4E3', 
-                    '#F2FBE0' // Lightest
+                    '#EEEFE0' // Lightest (for "전혀 그렇지 않다")
                 ];
                 
                 const q3Data = {
