--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@ Constraints: Single HTML file, no external JS/CSS (except CDNs), no SVG/Mermaid.
     <!-- Initial splash screen covering the whole viewport -->
     <div id="splashScreen">
         <header id="mainHeaderSplash" class="text-white px-4 text-center w-full max-w-7xl mx-auto">
-            <h1 class="text-4xl md:text-9xl font-extrabold report-title-main mb-3">학습 도우미 AI, 어디까지 써야할까?</h1>
-            <p class="text-3xl md:text-6xl font-semibold mb-4" style="color: rgb(226, 232, 229);">학생들의 생성형 AI 활용 실태와 학습 태도 분석</p>
+            <h1 class="text-3xl md:text-9xl font-extrabold report-title-main mb-3">학습 도우미 AI, 어떻게 써야할까?</h1>
+            <p class="text-2xl md:text-6xl font-semibold mb-4" style="color: rgb(226, 232, 229);">학생들의 생성형 AI 활용 실태와 학습 태도 분석</p>
             <br><br>
             <p class="text-lg md:text-xl font-medium">4조 : 1405김동현, 1407김진수, 1410신수아, 1413이여설, 1415조유진</p>
         </header>
@@ -178,7 +178,7 @@ Constraints: Single HTML file, no external JS/CSS (except CDNs), no SVG/Mermaid.
 
     <!-- Main Header for content (this one becomes sticky) -->
     <header id="mainHeaderContent" class="text-white px-4 text-center w-full">
-        <h1 class="text-5xl md:text-6xl font-extrabold report-title-main mb-6">학습 도우미 AI, 어디까지 써야할까?</h1>
+        <h1 class="text-5xl md:text-6xl font-extrabold report-title-main mb-6">학습 도우미 AI, 어떻게 써야할까?</h1>
         <p class="text-4xl md:text-5xl font-semibold mb-4" style="color: rgb(208, 226, 216);">학생들의 생성형 AI 활용 실태와 학습 태도 분석</p>
         <p class="text-lg md:text-xl font-medium">4조 : 1405김동현, 1407김진수, 1410신수아, 1413이여설, 1415조유진</p>
     </header>
@@ -339,17 +339,17 @@ Constraints: Single HTML file, no external JS/CSS (except CDNs), no SVG/Mermaid.
                 <div class="card-custom p-7 mb-10">
                     <h3 class="text-2xl md:text-3xl font-semibold text-primary-blue mb-8">가. 조사 결과 종합 및 주요 발견점 요약</h3>
                     <ul class="list-disc list-inside text-gray-800 space-y-3 leading-relaxed">
-                        <li><strong style="color: #1c683c;">AI 활용 정도 인식:</strong> 학생들은 AI 과다 의존보다 <span class="highlight-keyword">적절한 활용(힌트 50%)</span>이 가장 적절하다는 의견이 많았고, <span class="highlight-keyword">기본 개념만 익힐 때 참고용(27.8%)</span>으로 사용하는 것이 좋다는 의견도 있었다.</li>
-                        <li><strong style="color: #1c683c;">AI 답변 이해도 및 학습 노력:</strong> 대다수(94.5%)가 AI 답변을 이해한다고 인식. <span class="highlight-keyword">AI 내용을 소화하려는 노력이 관찰</span>되었다.</li>
-                        <li><strong style="color: #1c683c;">AI 사용의 방해 요인 인식:</strong> <span class="highlight-keyword">36.8%는 AI 사용이 사고력/지식 축적에 방해된다고 우려</span>. AI 영향에 대한 인식이 다양했다.</li>
-                        <li><strong style="color: #1c683c;">AI 사용 기준의 모호성:</strong> AI 사용 시점에 대한 <span class="highlight-keyword">명확한 기준이 없거나 개인별 차이</span>가 존재했다.</li>
+                        <li><strong style="color: #1c683c;">AI 활용 정도 인식:</strong> 학생들은 AI 과다 의존보다 <span class="highlight-keyword">적절한 활용(힌트 50%)</span>이 가장 적절하다는 의견이 많았고, <span class="highlight-keyword">기본 개념만 익힐 때 참고용(27.8%)</span>으로 사용하는 것이 좋다는 의견도 있었음.</li>
+                        <li><strong style="color: #1c683c;">AI 답변 이해도 및 학습 노력:</strong> 대다수(94.5%)가 AI 답변을 이해한다고 인식. <span class="highlight-keyword">AI 내용을 소화하려는 노력이 관찰</span>됨.</li>
+                        <li><strong style="color: #1c683c;">AI 사용의 방해 요인 인식:</strong> 36.8%는 <span class="highlight-keyword">AI 사용이 사고력/지식 축적에 방해된다고 우려</span>. AI 영향에 대한 인식이 다양했음.</li>
+                        <li><strong style="color: #1c683c;">AI 사용 기준의 모호성:</strong> AI 사용 시점에 대한 <span class="highlight-keyword">명확한 기준이 없거나 개인별 차이</span>가 존재함.</li>
                     </ul>
                 </div>
 
                 <div class="card-custom p-7 mb-10">
                     <h3 class="text-2xl md:text-3xl font-semibold text-primary-blue mb-8">나. 조사를 통해 새롭게 알게 된 점 및 느낀 점</h3>
                     <p class="text-gray-800 leading-relaxed mb-3">학생들은 <span class="highlight-keyword">AI를 학습 도구로 인식</span>하며 <span class="highlight-keyword">적절한 사용 방식</span>을 고민했다. <span class="highlight-keyword">AI 답변 해석 및 자기 지식화 노력은 긍정적</span>이었다. 동시에 <span class="highlight-keyword">사고력 저하 우려, 사용 기준 부족, 정보 신뢰성 문제</span>가 드러났다. <span class="highlight-keyword">비판적 수용, 윤리적 인식, 자기주도 학습 태도</span>의 중요성을 느꼈다.</p>
-                    <p class="text-gray-800 leading-relaxed">조사 결과는 <span class="highlight-keyword">한국청소년정책연구원의 연구와 유사점</span>을 보이며, <span class="highlight-keyword">청소년 세대 전체의 과제</span>를 반영한다. <span class="highlight-keyword">AI를 사고 확장 동반자로 보고, 스스로 판단하는 힘</span>이 중요하며, <span class="highlight-keyword">AI 리터러시 교육의 필요성</span>을 시사한다.</p>
+                    <p class="text-gray-800 leading-relaxed">조사 결과는 <span class="highlight-keyword">한국청소년정책연구원의 연구와 유사점</span>을 보이며, 청소년 세대 전체의 과제를 반영한다. <span class="highlight-keyword">AI를 사고 확장 동반자로 보고, 스스로 판단하는 힘이 중요</span>하며, AI 리터러시 교육의 필요성을 시사한다.</p>
                 </div>
                 
                 <div class="card-custom p-7 mb-10">
@@ -375,7 +375,7 @@ Constraints: Single HTML file, no external JS/CSS (except CDNs), no SVG/Mermaid.
                 </div>
 
                 <div class="card-custom p-8 pledge-card">
-                    <h3 class="text-2xl font-bold text-primary-blue mb-4">라. 우리의 다짐</h3>
+                    <h3 class="text-2xl md:text-3xl font-bold text-primary-blue mb-4">라. 우리의 다짐</h3>
                     <p class="text-gray-800 leading-relaxed font-medium">본 조사를 통해 생성형 AI의 효과적인 학습 활용에 대한 깊은 통찰을 얻었다. 앞으로 AI를 사용할 때, 조사 결과에서 나타난 우려들을 경계하고 제언한 내용들을 적극 실천하여, <span class="highlight-keyword">AI에 의존하기보다 AI와 함께 성장하며 스스로 생각하는 힘과 지식을 꾸준히 키워나갈 것을 다짐</span>한다. 또한, 우리가 얻은 지식과 경험을 친구들과 공유하며, 다 함께 AI 시대를 현명하게 헤쳐나갈 수 있도록 노력할 것이다.</p>
                 </div>
             </section>
@@ -385,8 +385,8 @@ Constraints: Single HTML file, no external JS/CSS (except CDNs), no SVG/Mermaid.
                 <h2 class="text-4xl md:text-5xl section-title-custom">5. 참고자료</h2>
                 <div class="card-custom p-7">
                     <ul class="list-disc list-inside text-gray-800 space-y-3">
-                        <li>인터뷰 전사 (조정모, 정재희 학생) - 미림마이스터고등학교 뉴미디어소프트웨어과 1학년 4반 (2025.5.)</li>
-                        <li>조사 설문지 - 미림마이스터고 소프트웨어과 1학년 4반 학생 18명 대상 (2025)</li>
+                        <li>인터뷰 녹취록 (조정모, 정재희 학생) - 미림마이스터고등학교 뉴미디어소프트웨어과 1학년 4반 (2025.5.)</li>
+                        <li>google form 조사 설문지 - 미림마이스터고 소프트웨어과 1학년 4반 학생 18명 대상 (2025)</li>
                         <li>AI 활용 교육 관련 문헌: 한국청소년정책연구원. (2024). 청소년의 생성형 AI 이용실태 및 리터러시 증진 방안 연구.</li>
                         <li>📖 공통국어 교과서 220p</li>
                         <li>🤖 Chat GPT, Gemini, Wrtn, Perplexity</li>
